# doc-jipge

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b057d4b48509_initial_tables.py
backend/app/: config.py  main.py
backend/app/api/: announcements.py  companies.py  eligibility.py  matching.py
backend/app/collectors/: base.py  bizinfo.py
backend/app/extractor/: rule_parser.py  text_llm.py
backend/app/matcher/: README.md
backend/app/models/: __init__.py  announcement.py  company.py  eligibility.py  match_result.py  pipeline_job.py
backend/app/schemas/: announcement.py  company.py  eligibility.py  match_result.py
backend/app/worker/: celery_app.py
backend/scripts/: seed_companies.py
backend/tests/: conftest.py  test_smoke.py
evaluation/ground_truth/ann_001/: ground_truth.json
evaluation/ground_truth/ann_002/: ground_truth.json
evaluation/ground_truth/ann_003/: ground_truth.json
evaluation/ground_truth/ann_004/: ground_truth.json
evaluation/ground_truth/ann_005/: ground_truth.json
frontend/: package-lock.json
frontend/src/app/: page.tsx
frontend/src/app/announcements/: page.tsx
