[project]
name = "doc-jipge"
version = "0.1.0"
description = "정부지원사업 자격요건 투명 검증 시스템"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # Database
    "sqlalchemy>=2.0.40",
    "alembic>=1.14.0",
    "psycopg[binary,pool]>=3.2.0",
    # Async task queue
    "celery>=5.4.0",
    "redis>=5.0.0",
    # HTTP client
    "httpx>=0.28.0",
    # FastAPI file upload
    "python-multipart>=0.0.18",
    # Web scraping
    "playwright>=1.49.0",
    # PDF processing
    "pymupdf>=1.25.0",
    # LLM APIs
    "openai>=1.60.0",
    "google-genai>=1.0.0",
    # Validation & config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Retry
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py313"
line-length = 120
